fix: fixed alignment issue with percentage paragraphs

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,6 @@ section {
 .percentages {
     border-radius: .3rem;
     text-align: center;
-    margin-left: 3rem;
 }
 
 .heading-button {
